--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="This is to do list implemented using Django by Dennis Ivy who is a full stack web developer."
+    />
 
-<head>
-  <meta charset="utf-8">
-  <meta name="description"
-    content="This is to do list implemented using Django by Dennis Ivy who is a full stack web developer.">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Users</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Users</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
 
-
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-
-  <div id="app"></div>
-  <script src="/src/index.js"></script>
-</body>
-
+    <div id="app"></div>
+    <script src="/src/index.js"></script>
+  </body>
 </html>
